--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # secrets
 /src/firebase/config.js
+.firebase
 
 # Logs
 logs
@@ -38,7 +39,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build
 
 # Dependency directories
 node_modules/
